# lumia

./: .gitignore  .hgignore  .hgtags  .lumia-config-v6-tr-co2.yml.kate-swp  404.html  CNAME  LumiaDA-sf.epj  LumiaDA.epj  LumiaMaster.epj  Makefile  README.md  cdo-icos-quarter-degree.grid  coco2_co2_v2.rc.orig  coco2_co2_v4-local.yml  coco2_co2_v4.rc  coco2_co2_v4.yml  coco2_co2_v5.yml  coco2_co2_v5.yml.bac  coco2_co2_v5.yml.back  coco2_co2_v5.yml.spagetti  coco2_co2_v5.yml.test  gridtools.py  index.html  index.ipynb  lumia-config-v6-tr-co2-local.yml  lumia-config-v6-tr-co2-local.yml.orig  lumia-config-v6-tr-co2.yml  lumia-config-v6-tr-co2.yml.bac2  lumia.def  lumia.py  lumiaenv.def  mkdocs.yml  pyproject.toml  rcf  req.txt  requirements-old.txt  requirements.txt  run.py  setup.py  sitemap.xml  (+3 more)
.eric7project/: LumiaDA-sf.eqj  LumiaDA-sf.esj  LumiaDA-sf.etj  LumiaDA.edj  LumiaDA.eqj  LumiaDA.esj  LumiaDA.etj
.jedi/: project.json
GMDD/: R100.rc  R500.rc  RA.rc  RErr3H_normalized.rc  RErr3H_scaled_normalized.rc  RP.rc  RRefG.rc  RRefG2.rc  S100.rc  S500.rc  SA.rc  SErr3H_normalized.rc  SErr3H_scaled_normalized.rc  SP.rc  SRefG.rc  SRefG2.rc  calc_posterior_err.py  dummy.rc  forward.py  obsdb.ipynb  rcfiles.html  rcfiles.ipynb  transport.html  transport.ipynb  var4d.html  var4d.ipynb  var4d.py
archive/: __init__.py
data/: index.html
doc/: fluxes.html  fluxes.ipynb  obsdb.html  rcfiles.html  rcfiles.ipynb  transport.html  transport.ipynb  var4d.html  var4d.ipynb
docs/: CNAME  index.md  installation.md  observations.md  settings.md  tutorial.md
dummy/: index.html
(+285 files in other folders)
